# Synthetic-Employees

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SCENARIOS.md  config.yaml  pyproject.toml  requirements.txt  test_email_exchange.py  test_npc_lifecycle.py  test_prysmian_workflow.py
.claude/: CLAUDE.md
.claude/docs/: ARCHITECTURE.md  DEPLOYMENT.md  SETUP.md
.github/agents/: employee-default.md  employee-developer.md  employee-editor.md  employee-editorial-director.md  employee-executive.md  employee-kam.md  employee-proofreader.md  employee-writer.md
agents/_template/: background.md  expertise.md  persona.json  relationships.md
agents/agnieszka.kaczmarek/: background.md  expertise.md  persona.json  relationships.md
agents/alejandro.vega/: background.md  expertise.md  persona.json  relationships.md
agents/alexander.wolf/: background.md  expertise.md  persona.json  relationships.md
agents/amlie.petit/: background.md  expertise.md  persona.json  relationships.md
agents/andrea.colombo/: background.md  expertise.md  persona.json  relationships.md
agents/anna.kowalski/: background.md  expertise.md  persona.json  relationships.md
agents/annika.berg/: background.md  expertise.md  persona.json  relationships.md
agents/antonio.conti/: background.md  expertise.md  persona.json  relationships.md
agents/aoife.murphy/: background.md  expertise.md  persona.json  relationships.md
agents/astrid.larsson/: background.md  expertise.md  persona.json  relationships.md
agents/benjamin.moore/: background.md  (+3 more)
config/: agents.json.example
data/: activity_report.md
events/: README.md  bad_coffee.yaml  birthday_party.yaml  call_in_sick.yaml  fire_drill.yaml  friday_drinks.yaml
src/: main.py  monitor.py
tests/: README.md  test_agency_v2.py  test_communication_channel.py  test_npc_lifecycle.py  test_rate_limiting.py  test_scenario_e2e.py
(+398 files in other folders)
